# projet_finale_dataviz

./: DEPLOYMENT.md  QUICKSTART.md  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: app.py  data_processor.py  llm_handler.py  utils.py  visualization.py
tests/: test_data_processor.py  test_llm_handler.py
