# Dependencies (if using poetry)
[tool.poetry]
package-mode = false
[project]
name = "projet-finale-dataviz"
version = "0.1.0"
description = "Build an intelligent data visualization web application using Streamlit and Gemini API that automatically generates and justifies visualization proposals based on user questions and datasets."
authors = [
    {name = "Ghassen Rhouma"}
]
license = {text = "Proprietary"}
readme = "README.md"
requires-python = "3.12"
dependencies = [
    "streamlit>=1.28.0,<2.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.7.0,<4.0.0",
    "seaborn>=0.12.0,<0.13.0",
    "plotly>=5.15.0,<6.0.0",
    "google-generativeai>=0.3.0,<0.4.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)"
]
